--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Flickr APP - fed-exercise" />
+    <meta name="keywords" content= "flickr, app , flickr api, ibm exercise, hire me" />
     <title>Flickr APP</title>
     
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -13,7 +15,7 @@
     <meta name=theme-color content=#252525>
     
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.min.css?v1.3" />
+    <link rel="stylesheet" href="css/style.min.css?v2" />
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Lato" rel="stylesheet">
   </head>
   
