--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <meta name=theme-color content=#252525>
     
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.min.css?v2" />
+    <link rel="stylesheet" href="css/style.css?v2" />
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Lato" rel="stylesheet">
   </head>
   
   <body id="flickr-app">
     <component-header></component-header>
+    <component-banner></component-banner>
     <component-btn></component-btn>
     <component-flickr></component-flickr>
     <component-footer></component-footer>
@@ -29,8 +30,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react.min.js"></script>
     <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.8.1/axios.min.js"></script>
-    <script type="text/babel" src="components/components-react.js?v2"></script>
+    <script type="text/babel" src="components/components-react.js?v3"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="js/script.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
