--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name=theme-color content=#252525>
     
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css?v2" />
+    <link rel="stylesheet" href="css/style.min.css?v3" />
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Lato" rel="stylesheet">
   </head>
   
@@ -32,6 +32,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.8.1/axios.min.js"></script>
     <script type="text/babel" src="components/components-react.js?v3"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js?v3"></script>
   </body>
 </html>
